=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2017/02/15 1.1.1
================

 - Fixed a console results issue that caused the results table not to be 
   displayed after horizontal scrolling.

 - Fixed an issue that caused the admin-ui to load only one plugin.

 - Display warning in the console view when the query result contains
   an unsafe integer.

 - Relocated the help resources section to be underneath the tweet 
   import tutorial.

 - Show loading indicator when `Execute Query ` is in progress.

2017/01/11 1.1.0
================

 - Breaking: Updated the admin-ui build to be compatible with future crate 
   versions which will serve the admin-ui from root `/`.

 - Improved console results table, including data type based colorization,
   alternating row colorization, structured object/array formatting, human-readable
   timestamps, Google Maps link on geo-point results & lazy loading on result sets
   larger than 100 rows.

2017/01/11 1.0.4
================

 - Fixed getting started display issue on very wide screens.

2017/01/02 1.0.3
================

 - Added compatibility with future crate versions which will serve
   the admin-ui from `/admin/` instead of `/_plugins/crate-admin/`.

2016/12/12 1.0.2
================

 - Removed pepper widget, support links are now in a Help section along width
   the Get Started tutorial.

 - Changed read notification behaviour so that all items are marked as
   read upon opening the settings.

 - Lowered opacity of placeholder query in the console.

 - Fix intercom support that disappeared during the implementation
   of the new admin-ui layout.

 - Fix Radio button position in load overview.

 - Made schema tabs more distinguishable from tables in the table list.

 - Updated link to support website in contact widget.

2016/12/02 1.0.1
================

 - Fixed an issue that caused incorrect URL paths if the project gets built.
