@@ -65,6 +65,7 @@
     <!-- build:js({.tmp,app}) static/scripts/scripts.js -->
     <script type="application/javascript" src="scripts/app.js"></script>
 
+    <script type="application/javascript" src="scripts/services/utils.js"></script>
     <script type="application/javascript" src="scripts/services/sql.js"></script>
     <script type="application/javascript" src="scripts/services/health.js"></script>
     <script type="application/javascript" src="scripts/services/stats.js"></script>
