@@ -4,6 +4,7 @@ var MODULES = [
   'ngRoute',
   'ngCookies',
   'truncate',
+  'utils',
   'sql',
   'stats',
   'common',
