@@ -4,6 +4,8 @@ Changes for Crate Admin Interface
 
 Unreleased
 ==========
+  
+ - Fixed an issue that caused the notification date to be `null` in safari.
 
 2017/02/15 1.1.1
 ================
